# dotty

./: .gitignore  .goreleaser.yaml  .markdownlint-cli2.yaml  .prettierignore  .prettierrc.yaml  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  go.mod  go.sum  pyproject.toml  zensical.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  release.yaml
cmd/: brewfile.go  brewfile_add.go  brewfile_dump.go  brewfile_edit.go  brewfile_sync.go  brewfile_upgrade.go  docs.go  dotfiles.go  dotfiles_link.go  dotfiles_restore.go  dotfiles_status.go  env.go  env_get.go  env_list.go  env_run.go  env_test.go  env_use.go  git.go  git_config_defaults.go  git_config_defaults_test.go  git_merge.go  git_propose.go  git_propose_test.go  git_resign.go  git_sync.go  init.go  init_test.go  main.go  profile.go  profile_activate.go  profile_new.go  root_test.go  securitykey.go  securitykey_add.go  securitykey_allow.go  securitykey_allow_test.go  securitykey_remove.go  signingkey.go  signingkey_askpass.go  signingkey_authorize.go  (+16 more)
docs/: hardware-checklist.md  index.md
docs/cli/: dotty.md  dotty_brewfile.md  dotty_brewfile_add.md  dotty_brewfile_dump.md  dotty_brewfile_edit.md  dotty_brewfile_sync.md  dotty_brewfile_upgrade.md  dotty_completion.md  dotty_completion_bash.md  dotty_completion_fish.md  dotty_completion_powershell.md  dotty_completion_zsh.md  dotty_dotfiles.md  dotty_dotfiles_link.md  dotty_dotfiles_restore.md  dotty_dotfiles_status.md  dotty_env_run.md  dotty_git.md  dotty_git_propose.md  dotty_git_sync.md  dotty_init.md  (+18 more)
overrides/: home.html
tools/: go.mod  go.sum
(+142 files in other folders)
