# Copyright 2026 Bitwise Media Group Ltd.
# SPDX-License-Identifier: MIT

[project]
name = "dotty"
version = "0.1.0"
description = "Utilities for a terminal-driven workflow and dotfiles: profiles, Brewfiles, security-key aliases and YubiKey-resident SSH signing keys."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "BitWise Media Group Ltd.", email = "oss@bitwisemedia.uk" }]
dependencies = [
  "zensical>=0.0.46",
]
